💄 fix z-index issue on register form and header

--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -483,7 +483,7 @@ button.main-dash-button-style:hover:before {
 .header-main {
   position: sticky;
   top: 0;
-  z-index: 99;
+  z-index: 9999;
   background-color: $maincolor;
   padding: 1rem;
   display: flex;
@@ -873,7 +873,7 @@ button.main-dash-button-style:hover:before {
 
   .container {
     background-color: $white;
-    border-radius: 5rem;
+    border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     height: 800px;
     overflow: hidden;
@@ -980,7 +980,7 @@ button.main-dash-button-style:hover:before {
 
   .btn {
     background-color: $accent;
-    background-image: linear-gradient(90deg, $darkerblue 0%, $accent 74%);
+    background-image: $gradient;
     border-radius: 20px;
     border: none;
     color: $white;
